# Sentiment-Analysis-News-API

./: DockerFile  akaike3.py  main.py  pyproject.toml  readme.MD  requirements.txt  streamlit_frontend.py
Final/: __init__.py
Final/controllers/: __init__.py  news_controller.py
Final/models/: response_model.py
Final/utils/: scraper_utils.py  sentiment_utils.py  text_to_speech_utils.py
akaike/: __init__.py
akaike/controllers/: __init__.py  news_controller.py  sentiment_controller.py  text_to_speech_controller.py  tts_controller.py
akaike/models/: __init__.py  company_model.py  sentiment_model.py
akaike/utils/: scraper.py  scraper_utils.py  sentiment.py  tts.py
