[project]
name = "akaike"
version = "0.1.0"
description = ""
authors = [
    {name = "Gagandeep",email = "gagandeepvjy41003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "gtts (>=2.5.4,<3.0.0)",
    "googletrans (==4.0.0-rc1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
